--- a/1- Currency/Currency.html
+++ b/1- Currency/Currency.html
@@ -20,9 +20,12 @@
     
 
 
-    <div class="nav">
-        <span> <h2>Currencies transfer Application </h2></span>
+    <div class="container">
+        <div class="nav">
+            <span> <h2>Currencies transfer Application </h2></span>
+        </div>
     </div>
+
 
     <div class="container">
         <div class="currencies">
